# One-Core-API-Source

dll/directx/wine/: CMakeLists.txt
dll/win32/advapi32/: advapi32.spec
dll/win32/shell32/: shell32.spec
oca/: CMakeLists.txt
oca/api-sets/: API-MS-WIN-APPMODEL-RUNTIME-L1-1-0.spec  CMakeLists.txt  api-ms-win-core-handle-l1-1-0.spec  api-ms-win-core-string-obsolete-l1-1-0.spec  api-ms-win-core-sysinfo-l1-2-1.spec
oca/appcompat/: CMakeLists.txt
oca/appcompat/slayeroca/: CLayerUIPropPage.cpp  CMakeLists.txt  SlayerOCA.manifest  SlayerOCA.rc  precomp.h
oca/appcompat/slayeroca/lang/: en-US.rc
oca/appcompat/slayeroca/res/: acppage.rgs
oca/base/dwrite_wrapper/: main.c
oca/base/shlwapi_wrapper/: main.h
oca/base/user32_wrapper/: hooks - Cópia.c  main.h
oca/dependencies/d3d9core/: CMakeLists.txt  device.c  directx.c
oca/dependencies/idndl/: CMakeLists.txt
oca/dependencies/mfplat/: CMakeLists.txt
oca/dependencies/shellnew/: CMakeLists.txt
oca/dependencies/shlwnew/: CMakeLists.txt
oca/dependencies/ucrtbase/: string.c  ucrtbase.spec
oca/dependencies/userbase/misc/: stubs.c
oca/dependencies/userbase/windows/: message.c
oca/dependencies/winhttpbase/: rsrc.rc  winhttpbase.spec
oca/directx/dxg/d3d9_dxg/: d3d9_common.h  d3d9_create.c  d3d9_create.h  d3d9_private.h  d3d9_swapchain.c  d3d9_swapchain.h  d3d9_texture.c  device.c
oca/directx/dxg/d3d9_dxg_working/: d3d9_create.c  d3d9_device.h  d3d9_swapchain.h
oca/directx/dxg/d3d9_wrapper/: CMakeLists.txt
oca/drivers/new/: CMakeLists.txt
oca/drivers/new/genfbvmp/: genfbvmp.c  genfbvmp.rc
oca/ext-sets/: CMakeLists.txt
oca/ext-sets/ext-ms-win-ntuser-synch-l1-1-0/: CMakeLists.txt
oca/extensions/advapiex/: CMakeLists.txt  advapiex.spec  hooks.c  main.c  main.h  sha1.c
oca/extensions/bcryptext/: main.c
oca/extensions/dnsapiext/: CMakeLists.txt  dns.c  dnsapiext.spec
oca/extensions/kernelex/: CMakeLists.txt  console.c  dllatom.c  enclave.c  filehops.c  fileinfo.c  fileopcr.c  handle.c  kernelex.spec  main.h  module.c  numa.c  path.c  process.c  reg.c  sysinfo.c  thread.c
oca/extensions/ntext/: ntext.spec
oca/extensions/ntext/ntapi/: hooks.c  ntapi.c
oca/extensions/ntext/rtl/: critical.c  path.c  threadpool.c  time.c
oca/extensions/powrpext/: main.c  powrpext.spec
oca/extensions/shellex/: CMakeLists.txt  assoc.c  main.h  pidl.c  shellex.spec  shellitem.c  utils.c
oca/extensions/shellex/Backup/: CMakeLists.txt
oca/extensions/uiautomationcoreext/: main.c  uiautomationcoreext.spec
oca/extensions/userenvext/: userenvext.spec
oca/extensions/userex/: display.c
oca/extensions/winttpext/: winhttpext.spec
oca/new-dlls/: CMakeLists.txt
oca/new-dlls/combase/: string.c
oca/new-dlls/dwmapi/: dwmapi.spec  dwmapi_main.c
oca/new-dlls/explorerframe/: taskbarlist.c
oca/new-dlls/iconcodecservice/: CMakeLists.txt  icon.c  version.rc
oca/new-dlls/rtworkq/: CMakeLists.txt
oca/new-dlls/sas/: CMakeLists.txt
oca/new-dlls/shcore/: CMakeLists.txt  main.c  shcore.spec
oca/new-dlls/slc/: slc.c
oca/new-dlls/tbs/: CMakeLists.txt
oca/new-dlls/tdh/: CMakeLists.txt
oca/new-dlls/tzres/: CMakeLists.txt
oca/new-dlls/uiribbon/: CMakeLists.txt
oca/new-dlls/wevtapi/: wevtapi.spec
oca/new-dlls/windowsglobalization/: CMakeLists.txt
oca/new-dlls/windowssystemlauncher/: version.rc
oca/to-synch/: CMakeLists.txt
oca/wrappers/: CMakeLists.txt
oca/wrappers/comdlg32_wrapper/: CMakeLists.txt
oca/wrappers/d3d9ex_wrapper/: CMakeLists.txt  d3d9ex_wrapper.cpp  d3d9ex_wrapper.h  d3d9ex_wrapper.rc
oca/wrappers/gdi32_wrapper/: d3dkmt.c  dx.c  gdi32_wrapper.spec
oca/wrappers/user32_wrapper/: CMakeLists.txt  clipboard.c  cursor.c  desktop.c  dpi.c  dwm.c  exticon.c  hooks.c  icon.c  main.c  main.h  message.c  misc.c  notification.c  process.c  shutdown.c  timer.c  touch.c  user32_wrapper.spec  window.c
oca/wrappers/ws2_32_wrapper/: main.h  socket.c  ws2_32_wrapper.spec
wrappers/api-sets/: CMakeLists.txt  api-ms-win-core-sysinfo-l1-2-0.spec  api-ms-win-downlevel-shlwapi-l2-1-0.spec
wrappers/aplications/wusa_new/: main.c
wrappers/base/gdi32_wrapper/: CMakeLists.txt  d3dkmt.c  gdi32_wrapper.spec  main.h
wrappers/base/shlwapi_wrapper/: CMakeLists.txt  main.c  shlwapi_wrapper.spec
wrappers/base/user32_wrapper/: CMakeLists.txt  display.c  main.c  main.h  message.c  process.c  sysparams.c  user32_wrapper.spec  window.c
wrappers/base/uxtheme_wrapper/: main.c
wrappers/base/ws2_32_wrapper/: CMakeLists.txt  hooks.c  main.h  socket.c  ws2_32_wrapper.spec
wrappers/dependencies/: CMakeLists.txt
wrappers/dependencies/gdibase/: CMakeLists.txt
wrappers/dependencies/setupapibase/: setupapi_private.h  stubs.c
wrappers/dependencies/ucrtbase/: ucrtbase.spec
wrappers/drivers/new/genfbvmp/: CMakeLists.txt  genfbvmp.inf  genfbvmp_reg.inf
wrappers/ext-sets/ext-ms-win-ntuser-synch-l1-1-0/: ext-ms-win-ntuser-synch-l1-1-0.spec
wrappers/extensions/advapiex/: advapiex.spec  reg.c
wrappers/extensions/bcryptext/: main.c
wrappers/extensions/cfgmgrex/: cfgmgrex.spec
wrappers/extensions/cryptex/: cryptex.spec  main.c
wrappers/extensions/dnsapiext/: main.h
wrappers/extensions/iphlpext/: iphlpapi.c
wrappers/extensions/kernelex/: CMakeLists.txt  appmodel.c  kernelex.spec  process.c  synch.c  sysinfo.c  thread.c
wrappers/extensions/ntext/: CMakeLists.txt  main.c  main.h  ntext.spec
wrappers/extensions/oleex/: oleex.spec
wrappers/extensions/rpcrtext/: rpcrtext.spec
wrappers/extensions/shellex/: CMakeLists.txt  hooks.c  misc.c  shellex.spec  shellpath.c  shlfileop.c  unimplemented.c
wrappers/extensions/uxthext/: hooks.c  uxthext.spec
wrappers/extensions/winttpext/: main.c
wrappers/new-dlls/: CMakeLists.txt
wrappers/new-dlls/avrt/: main.c
wrappers/new-dlls/combase/: combase.spec  roapi.c
wrappers/new-dlls/dwmapi/: dwmapi_main.c
wrappers/new-dlls/shcore/: istream.c  main.c  main.h  shcore.spec
wrappers/new-dlls/sppc/: CMakeLists.txt
wrappers/new-dlls/windowssystemlauncher/: CMakeLists.txt  main.c  main.h
wrappers/tools/wct/: CompatibilityTool.c
(+32 files in other folders)
